tests/purs/passing/Module.purs
module Main where

import M1
import M2
import Effect.Console (log)

main = log "Done"
